# persona-chain

./: .dockerignore  .env.production  .env.startup  .eslintrc.js  .gcloudignore  .gitignore  .railwayignore  .vercelignore  BUGFIXES.md  CALLBACK_URLS.md  CHANGELOG.md  CLAUDE.md  CLAUDE_MEMORY.md  COMPREHENSIVE_REBUILD_PLAN.md  CRITICAL-FIXES-COMPLETE.md  CRITICAL_FIXES_COMPLETE_REPORT.md  DEPLOY-GCP-HSM.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEVELOPMENT_WORKFLOW.md  Dockerfile  Dockerfile.blockchain  Dockerfile.complex  ENABLE_RAPIDAPI_NOW.md  FAUCET-FIX.md  FEATURE_ANALYSIS.md  FINAL-DEPLOYMENT-STEPS.md  FINAL_DEPLOYMENT_CONFIRMATION.md  FRONTEND_FIX_STRATEGY.md  HIGH_UTILITY_APIS.md  HTTPS_PROXY_SETUP.md  LAUNCH_READINESS_SUMMARY.json  LIVE-MARKETPLACE-VERIFICATION.md  LOGIN-FIXES-SUMMARY.md  MASTERCLASS_EXECUTION_PLAN.md  NEXT-STEPS-ROADMAP.md  OAUTH_SETUP.md  PERSONACHAIN_ARCHITECTURE_2025.md  PERSONAPASS-MASTER-PLAN.md  PERSONAPASS_DID_FIX_TEST_REPORT.md  (+132 more)
.claude/: mcp-config.json
.github/: codeql-config.yml
.serena/: project.yml
.vercel/: project.json
api/: github-auth.js  test.js  wasm-proxy.js
api-backend/: .env.example  README.md  server.js
app/: app.go
assets/: CredentialsPage-BWSMZLA1.js  CredentialsPage-DK1rcAoG.js  EliteWeb3Button-B7k2nWRZ.js  EliteWeb3Button-QcKBiMyG.js  EnhancedProofsPage-DYY6mtnu.js  EnhancedProofsPage-DsuuacQ8.js  GitHubAPIService-BSaNiPKp.js  GitHubAPIService-DDH1Imxf.js  IdentityVerificationPage-Be-jdbNj.js  IdentityVerificationPage-DT15JSCt.js  LoginPage-CmI_mMyA.js  LoginPage-DUQg8DRD.js  OAuthCallback--hDiZKnA.js  OAuthCallback-BhxqI_vP.js  StreamlinedOnboardingFlow-DMDvZ2L-.js  StreamlinedOnboardingFlow-FU70pXtK.js  TokenDashboard-Bn2mscZp.js  TokenDashboard-_fYoLPvK.js  TopNavigation-C2BrkBxQ.js  TopNavigation-u54Sy0Lu.js  ZKPDashboard-8Rx5Wk1z.js  ZKPDashboard-C8ROCuQB.js  cosmosTransactionService-5u_StjiJ.js  cosmosTransactionService-DNtvG11c.js  didService-BQO5nZK8.js  didService-DqvDgkur.js  enhancedZKProofService-DIBuYPr9.js  enhancedZKProofService-Dc2iGsen.js  index-4ObsLF-s.js  index-BVH3G8-4.js  index-C6Zm4510.js  index-tl5-kq3o.css
circuits/: advanced_age_verification.circom  advanced_credential_verification.circom  advanced_income_verification.circom  advanced_membership_verification.circom  advanced_selective_disclosure.circom  age_verification.circom  compile.sh  income_threshold.circom  membership_proof.circom  package.json  range_proof.circom  selective_disclosure.circom  simple_age_proof.circom  simple_income_proof.circom  test-zk-proofs.js  verify-compilation.js
circuits/age_verification/: Cargo.toml
circuits/age_verification/src/: lib.rs
contracts/zk-verifier/: Cargo.toml  deploy-cosmjs.js  deploy-script.sh  package.json  test-verification.sh
contracts/zk-verifier/src/: access_control.rs  contract.rs  contract_enterprise.rs  determinism_audit.rs  encryption.rs  error.rs  lib.rs  msg.rs  state.rs  state_enterprise.rs  verifier.rs
contracts/zk-verifier/tests/: access_control.rs  access_control_test.rs  integration_cosmjs_test.js  integration_test.rs  multitest.rs  simplified_multitest.rs
contracts/zk-verifier/tests/multitest/: mod.rs  test_verifier.rs
dev-dist/: sw.js
(+1127 files in other folders)
