[package]
name = "age_verification"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
base64 = "0.21"
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-bn254 = { version = "0.4", default-features = false }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-crypto-primitives = { version = "0.4", features = ["r1cs"], default-features = false }

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[features]
default = ["console_error_panic_hook"]