[package]
name = "zk-verifier"
version = "0.1.0"
authors = ["Persona Chain Team <team@personachain.dev>"]
edition = "2021"
description = "Zero-Knowledge Proof Verifier Contract for Persona Chain"
license = "Apache-2.0"
repository = "https://github.com/persona-chain/persona-chain"
homepage = "https://personachain.dev"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []
# enable production groth16 verification with arkworks
production-verification = []
default = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cosmwasm-storage = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
schemars = "0.8.10"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }

# ZK proof verification dependencies
hex = "0.4.3"
base64 = "0.22.0"
serde_json = "1.0"
sha2 = "0.10.6"

# Production Groth16 verification
ark-groth16 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-serialize = "0.4.0"
ark-std = "0.4.0"
ark-snark = "0.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.15"

# Encryption dependencies
aes-gcm = "0.10.1"

[dev-dependencies]
cw-multi-test = "0.20.0"
anyhow = "1.0"
assert_matches = "1.5"
serde_json = "1.0"